--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,13 @@
-$PrimaryBlue: #376996;
-$LightBlue: #6290c8;
-$DarkBlue: #1d3461;
-$MutedBlue: #829cbc;
-$AlmostBlack: #222222;
-$AlmostWhite: #eeeeee;
+$primaryBlue: #376996;
+$lightBlue: #6290c8;
+$darkBlue: #1d3461;
+$mutedBlue: #829cbc;
+$fontColor: #222222;
+$almostWhite: #eeeeee;
+
+$defaultFont: "Montserrat", serif;
+$lightWeight: 300;
+$normalWeight: 500;
+$boldWeight: 700;
+
+$gutter: 16px;
