--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@ $lightBlue: #6290c8;
 $darkBlue: #1d3461;
 $mutedBlue: #829cbc;
 $fontColor: #222222;
-$almostWhite: #eeeeee;
+$almostWhite: #f5f5f5;
 
 $defaultFont: "Montserrat", serif;
 $lightWeight: 300;
