--- a/css/styles.css
+++ b/css/styles.css
@@ -331,3 +331,31 @@ body {
   font-weight: 500;
   color: #222222;
 }
+
+#headerWrapper {
+  background-color: #f5f5f5;
+  color: #1d3461;
+}
+
+header {
+  display: flex;
+  align-items: flex-end;
+  padding: 1rem 16px;
+  gap: 8px;
+}
+header h1 {
+  margin: 0;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+@media only screen and (min-width: 60rem) {
+  header, nav, main, footer {
+    max-width: 70rem;
+    margin: auto;
+  }
+  header h1 {
+    font-size: 2.2rem;
+    font-weight: 500;
+  }
+}
