--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -331,6 +332,7 @@ body {
   font-weight: 500;
   color: #222222;
   background-color: #f5f5f5;
+  min-width: 320px;
 }
 
 #headerWrapper {
@@ -340,10 +342,12 @@ body {
 }
 
 header {
-  display: flex;
-  align-items: flex-end;
-  padding: 1rem 16px;
-  gap: 8px;
+  display: grid;
+  grid-template-columns: 50px auto 44px;
+  -moz-column-gap: 16px;
+       column-gap: 16px;
+  align-items: center;
+  padding: 0.5rem 16px;
 }
 header h1 {
   margin: 0;
@@ -351,7 +355,64 @@ header h1 {
   font-weight: 500;
 }
 
-@media only screen and (min-width: 60rem) {
+@media only screen and (min-width: 320px) {
+  #theButton {
+    border: none;
+    background: none;
+    font-size: 2rem;
+    color: #555;
+    width: 44px;
+    height: 44px;
+    cursor: pointer;
+  }
+  #theButton::before {
+    content: "☰";
+  }
+  #theButton.open::before {
+    content: "✕";
+    font-size: 1.6rem;
+  }
+  #theNav {
+    background-color: #1d3461;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  #theNav li a {
+    display: block;
+    padding: 0.75rem 2vw;
+    font-size: 14px;
+    color: #f5f5f5;
+    text-decoration: none;
+    border-top: 1px solid #6290c8;
+  }
+  #theNav li.active a {
+    background-color: #6290c8;
+    color: white;
+  }
+  #theNav li a:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  #theNav.open {
+    height: auto;
+  }
+  .parent > a::after {
+    content: "▼";
+    float: right;
+  }
+  .parent ul {
+    list-style-type: none;
+    padding: 0;
+    background-color: #376996;
+    display: none;
+  }
+  .parent:hover ul {
+    display: block;
+  }
+}
+@media only screen and (min-width: 768px) {
   header, nav, main, footer {
     max-width: 70rem;
     margin: auto;
