--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,10 +4,14 @@
 
 @import "small";
 
-@media only screen and (min-width: 35rem) {
+@media only screen and (min-width: 320px) {
+    @import "mobilemenu";
+} // end of media query
+
+@media only screen and (min-width: 576px) {
     @import "medium";
 } // end of media query
 
-@media only screen and (min-width: 60rem) {
+@media only screen and (min-width: 768px) {
     @import "large";
 } // end of media query
