--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,14 @@ header h1 {
   font-weight: 500;
 }
 
+#mainWrapper {
+  max-width: 70rem;
+  margin: auto;
+}
+#mainWrapper .hero img {
+  max-width: 100%;
+}
+
 @media only screen and (min-width: 320px) {
   #theButton {
     border: none;
