--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,10 @@ header h1 {
   max-width: 100%;
 }
 
+#contentWrapper {
+  padding: 0 16px;
+}
+
 @media only screen and (min-width: 320px) {
   #theButton {
     border: none;
@@ -428,5 +432,15 @@ header h1 {
   header h1 {
     font-size: 2.2rem;
     font-weight: 500;
+  }
+  #theButton {
+    display: none;
+  }
+  #theNav {
+    height: auto;
+    display: flex;
+  }
+  #theNav li ul {
+    position: absolute;
   }
 }
