--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -22,6 +22,12 @@ header {
     }
 }
 
+// create for loop to generate grid classes
+@for $i from 1 through 12 {
+    $w: calc($i/12) * 100%;
+    .large-#{$i} {flex-basis: $w;}
+  }
+
 footer div {
     display: grid;
     grid-template-columns: auto auto auto;
