--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -1,3 +1,9 @@
+// create for loop to generate grid classes
+@for $i from 1 through 12 {
+    $w: calc($i/12) * 100%;
+    .medium-#{$i} {flex-basis: $w;}
+  }
+
 footer div {
     display: grid;
     grid-template-columns: auto auto;
