initial cards - no size consistency on images yet

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -56,6 +56,21 @@ header {
   padding: 0 $gutter;
 }
 
+// parent elements
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 $gutter;
+}
+
+
 // create for loop to generate grid classes
 @for $i from 1 through 12 {
   $w: calc($i/12) * 100%;
