--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,19 @@ header h1 {
   padding: 0 16px;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 16px;
+}
+
 .small-1 {
   flex-basis: 8.3333333333%;
 }
