card styling implemented

--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -28,6 +28,20 @@ header {
     .large-#{$i} {flex-basis: $w;}
   }
 
+.card1 figure {
+    position: relative;
+    &:hover figcaption {opacity: 1}
+    figcaption {
+        position: absolute;
+        bottom: 0;
+        background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9));
+        width: 100%;
+        opacity: 0;
+        padding: 3rem 0 .5rem 0;
+        transition: opacity .5s ease;
+    }
+}
+
 footer div {
     display: grid;
     grid-template-columns: auto auto auto;
