--- a/css/styles.css
+++ b/css/styles.css
@@ -485,11 +485,23 @@ footer p.legal {
 }
 
 .card1 figure {
-  margin: 0;
+  margin: 1rem 0;
+  border-radius: 6px;
+  overflow: hidden;
 }
 .card1 figure img {
   width: 100%;
   height: auto;
+  display: block;
+}
+.card1 figure figcaption {
+  padding: 0.5rem;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  text-align: center;
+  background: #376996;
+  color: #f5f5f5;
 }
 
 @media only screen and (min-width: 320px) {
@@ -645,6 +657,21 @@ footer p.legal {
   }
   .large-12 {
     flex-basis: 100%;
+  }
+  .card1 figure {
+    position: relative;
+  }
+  .card1 figure:hover figcaption {
+    opacity: 1;
+  }
+  .card1 figure figcaption {
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+    width: 100%;
+    opacity: 0;
+    padding: 3rem 0 0.5rem 0;
+    transition: opacity 0.5s ease;
   }
   footer div {
     display: grid;
