--- a/css/styles.css
+++ b/css/styles.css
@@ -504,6 +504,24 @@ footer p.legal {
   color: #f5f5f5;
 }
 
+.seemore {
+  display: block;
+  text-decoration: none;
+  background-color: #1d3461;
+  color: white;
+  padding: 1rem;
+  width: 260px;
+  display: block;
+  margin: 1rem auto;
+  text-align: center;
+  border-radius: 6px;
+  letter-spacing: 1px;
+  transition: background-color 0.5s ease;
+}
+.seemore:hover {
+  background-color: #376996;
+}
+
 @media only screen and (min-width: 320px) {
   #theButton {
     border: none;
