--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -153,3 +153,19 @@ footer {
     }
   }
 }
+
+.seemore {
+  display: block;
+  text-decoration: none;
+  background-color: $darkBlue;
+  color: white;
+  padding: 1rem;
+  width: 260px;
+  display: block;
+  margin: 1rem auto;
+  text-align: center;
+  border-radius: 6px;
+  letter-spacing: 1px;
+  &:hover {background-color: $primaryBlue;}
+  transition: background-color .5s ease;
+}
